--- a/movie/movieRent/templates/base_generic.html
+++ b/movie/movieRent/templates/base_generic.html
@@ -38,7 +38,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item active"><a class="nav-link" href= "{% url "movieRent:index" %}">Home</a></li>
-        <li class="nav-item "><a class="nav-link" href="#">Movie</a></li>
+        <li class="nav-item "><a class="nav-link" href="{% url "movieRent:index" %}">Movie</a></li>
       </ul>
     </div><!-- End of collapse -->
     {% block content %}
